--- a/EIP_System/Views/Shared/_Layout.cshtml
+++ b/EIP_System/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <!-- sidebar menu -->
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
-                            <div class="block"></div>
+                            <h2>泡麵冷水</h2>
                             <ul class="nav side-menu">
                                 <li>
                                     <a><i class="fa fa-edit"></i> 員工管理系統 <span class="fa fa-chevron-down"></span></a>
